test/valid/41625_DifferentReturnTypesInIfThenElse/C.plume
/**
 * Valid Test.
 * 
 * @author FábioBotelho - 41625@alunos.fc.ul.pt
 * @version $id 
 */
 
 class C extends B is 
 
 	method fc: () -> String  is
 		"c"