test/invalid/41625_ExtendBuiltinType/ExtendBuiltinType.plume
/**
 * Invalid Test.
 * Extending a bultin type is not allowed. 
 * @author FábioBotelho - 41625@alunos.fc.l.pt
 * @version $id 
 */
 
 abstract class ExtendBuiltinType extends Boolean is
   
